--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -832,9 +832,9 @@ section.eventbrite-home {
     width: 100%;
 }
 
-.contact-form input[type=email],
-.contact-form input[type=text],
-.contact-form input[type=url] {
+.wkc .contact-form input[type=email],
+.wkc .contact-form input[type=text],
+.wkc .contact-form input[type=url] {
     width: 100%;
     max-width: 100%;
     margin-bottom: 0.5em;
