Header links color

--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -997,7 +997,7 @@ section.eventbrite-home {
     }
 
     ul.sub-menu li a:hover {
-        color: black;
+        color: #666;
     }
 
     .menu-item-has-children a {
