--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -502,6 +502,13 @@ footer input:focus {
     text-align: left;
 }
 
+#home h1 {
+    hyphens: none;
+    line-height: 42px;
+    margin: 1em auto;
+    max-width: 13em;
+}
+
 a.url {
     color: black;
     display: inline-block;
