--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -679,35 +679,43 @@ ul.instagram-pics {
 
 /* Editor Styles ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-.has-wkc-blue-background-color {
+.has-wkc-blue-background-color,
+.wp-block-button__link.has-wkc-blue-background-color {
     background-color: #1d5565;
 }
 
-.has-wkc-blue-color {
+.has-wkc-blue-color,
+.wp-block-button__link.has-wkc-blue-color {
     color: #1d5565;
 }
 
-.has-wkc-gold-background-color {
+.has-wkc-gold-background-color,
+.wp-block-button__link.has-wkc-gold-background-color {
     background-color: #E2B33E;
 }
 
-.has-wkc-gold-color {
+.has-wkc-gold-color,
+.wp-block-button__link.has-wkc-gold-color {
     color: #E2B33E;
 }
 
-.has-black-background-color {
+.has-black-background-color,
+.wp-block-button__link.has-black-background-color {
     background-color: black;
 }
 
-.has-black-color {
+.has-black-color,
+.wp-block-button__link.has-black-color {
     color: black;
 }
 
-.has-white-background-color {
+.has-white-background-color,
+.wp-block-button__link.has-white-background-color {
     background-color: white;
 }
 
-.has-white-color {
+.has-white-color,
+.wp-block-button__link.has-white-color {
     color: white;
 }
 
