--- a/wp-content/themes/wkc01/assets/fonts/fonts.css
+++ b/wp-content/themes/wkc01/assets/fonts/fonts.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Prompt:400,700');
+@import url('https://fonts.googleapis.com/css?family=Prompt:400,400i,700,700i');
 
 @font-face {
     font-family: 'Steagal';
