--- a/wp-content/themes/wkc01/style.css
+++ b/wp-content/themes/wkc01/style.css
@@ -1367,7 +1367,7 @@ nav.prev-next-posts {
         width: calc( 50% - 5px );
     }
 
-    .wkc .archive-event:nth-of-type(even) {
+    body:not(#home).wkc .archive-event:nth-of-type(even) {
         margin-left: 30px;
     }
 
